# nr_protter

./: CMakeLists.txt  readme.md
src/: main.cpp  plotter.cpp  plotter.h
